--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ yarn-error.log*
 
 # Ignorar la carpeta de modelo entrenado del backend
 backend/app/Entrenamiento/model_training/
+# Ignorar archivos compilados de Python
+backend/*.pyc
+
+
