--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,14 @@ __pycache__/
 # Ignorar la carpeta de modelo entrenado del backend
 backend/app/ml/TallerPerritos.keras
 # Ignorar archivos compilados de Python
-backend/*.pyc
+backend/app/ml/__pycache__/
+backend/app/routes/__pycache__/
+backend/app/__pycache__
 
 backend/app/credenciales/fotos-perritos-809194cdb9d7.json
 
 *.pyc
 __pycache__/
 
+
+backend/.env
