--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "frontend": "file:",
     "next": "^14.2.14",
+    "qr-code-styling": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
