--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "frontend": "file:",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
