--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "dotenv": "^16.4.7",
     "frontend": "file:",
     "next": "^14.2.14",
     "qr-code-styling": "^1.8.4",
